# dirextalk-vnext-deployer

./: .gitignore  AGENTS.md  COMMANDS.md  Cargo.toml  LICENSE  README.md  SKILL.md  aws-ec2-x7.example.json  aws-ec2-x8.example.json  aws-ec2.example.json  build.rs  deployment.example.json  release.example.json  rust-toolchain.toml
.cargo/: config.toml
references/: deployment-manifest.md  release-manifest.md
scripts/: cargo.ps1
src/: archive.rs  aws_ec2.rs  cli.rs  client_binding.rs  connector_apply.rs  connector_apply_unsupported.rs  connector_claim.rs  deployment.rs  digest.rs  error.rs  lib.rs  main.rs  manifest.rs  plan.rs  publish.rs  receipt.rs  source.rs
src/aws_ec2/: bundle.rs  provision.rs  store.rs  tests.rs  workflow.rs
tests/: release_flow.rs
tests/fixtures/: legacy-5a6c2e9-x6.json
tests/fixtures/legacy/: cross-version-install-vnext
tests/fixtures/runtime-recovery/: install-vnext
tests/fixtures/runtime-recovery-r2/: install-vnext
