[package]
name = "dirextalk-vnext-deployer"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
description = "Typed, fail-closed release and deployment CLI for Dirextalk vNext"
license = "MIT"
publish = false
build = "build.rs"

[lib]
name = "dirextalk_vnext_deployer"
path = "src/lib.rs"

[[bin]]
name = "dirextalk-vnext-deployer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
flate2 = "1.1.9"
hex = "0.4.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v7"] }
zip = { version = "8.3.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(unix)'.dependencies]
fs2 = "0.4.3"
rustix = { version = "1.1.4", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
